--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": "^11.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-files": "^3.0.3",
     "react-icons": "^5.5.0",
     "react-to-print": "^3.1.0",
     "uuid": "^11.1.0"
